fix: compilation Linux + script run.sh + correction deprecation
- README: commandes find + res dans classpath
- Chemin.java: Integer.valueOf au lieu de new Integer
- run.sh: script de lancement rapide

Made-with: Cursor